src/parser.js
/* eslint-disable no-unused-vars */
/* eslint-disable no-control-regex */
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
    'use strict';

    function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }

    function peg$SyntaxError(message, expected, found, location) {
        this.message  = message;
        this.expected = expected;
        this.found    = found;
        this.location = location;
        this.name     = 'SyntaxError';

        if (typeof Error.captureStackTrace === 'function') {
            Error.captureStackTrace(this, peg$SyntaxError);
        }
    }

    peg$subclass(peg$SyntaxError, Error);

    peg$SyntaxError.buildMessage = function(expected, found) {
        var DESCRIBE_EXPECTATION_FNS = {
            literal: function(expectation) {
                return '"' + literalEscape(expectation.text) + '"';
            },

            'class': function(expectation) {
                var escapedParts = '',
                    i;

                for (i = 0; i < expectation.parts.length; i++) {
                    escapedParts += expectation.parts[i] instanceof Array
                        ? classEscape(expectation.parts[i][0]) + '-' + classEscape(expectation.parts[i][1])
                        : classEscape(expectation.parts[i]);
                }

                return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
            },

            any: function(expectation) {
                return 'any character';
            },

            end: function(expectation) {
                return 'end of input';
            },

            other: function(expectation) {
                return expectation.description;
            }
        };

        function hex(ch) {
            return ch.charCodeAt(0).toString(16).toUpperCase();
        }

        function literalEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/"/g,  '\\"')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
        }

        function classEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/\]/g, '\\]')
                .replace(/\^/g, '\\^')
                .replace(/-/g,  '\\-')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
        }

        function describeExpectation(expectation) {
            return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }

        function describeExpected(expected) {
            var descriptions = new Array(expected.length),
                i, j;

            for (i = 0; i < expected.length; i++) {
                descriptions[i] = describeExpectation(expected[i]);
            }

            descriptions.sort();

            if (descriptions.length > 0) {
                for (i = 1, j = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }

            switch (descriptions.length) {
            case 1:
                return descriptions[0];

            case 2:
                return descriptions[0] + ' or ' + descriptions[1];

            default:
                return descriptions.slice(0, -1).join(', ')
            + ', or '
            + descriptions[descriptions.length - 1];
            }
        }

        function describeFound(found) {
            return found ? '"' + literalEscape(found) + '"' : 'end of input';
        }

        return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
    };

    function peg$parse(input, options) {
        options = options !== void 0 ? options : {};

        var peg$FAILED = {},

            peg$startRuleFunctions = { start: peg$parsestart },
            peg$startRuleFunction  = peg$parsestart,

            peg$c0 = function(personalities, raids) {
                return {
                    'personalities': personalities,
                    'raids': raids
                };
            },
            peg$c1 = 'Personalities : ',
            peg$c2 = peg$literalExpectation('Personalities : ', false),
            peg$c3 = '[',
            peg$c4 = peg$literalExpectation('[', false),
            peg$c5 = '] ',
            peg$c6 = peg$literalExpectation('] ', false),
            peg$c7 = function(raidType) { return raidType; },
            peg$c8 = '\n',
            peg$c9 = peg$literalExpectation('\n', false),
            peg$c10 = function(personalities) {
                return personalities;
            },
            peg$c11 = function(firstLine, secondLine, option) { return option; },
            peg$c12 = function(firstLine, secondLine, options) {
                return concatObjects(firstLine, secondLine, {'options': options});
            },
            peg$c13 = ' : ',
            peg$c14 = peg$literalExpectation(' : ', false),
            peg$c15 = ' ',
            peg$c16 = peg$literalExpectation(' ', false),
            peg$c17 = function(name, state, access) { return access; },
            peg$c18 = function(name, state, access, type) { return type; },
            peg$c19 = function(name, state, access, type, device) { return device; },
            peg$c20 = function(name, state, access, type, devices) {
                return {
                    'name': name,
                    'state': state,
                    'access': (access ? access : 'rw'),
                    'type': type,
                    'devices': devices
                };
            },
            peg$c21 = 'active',
            peg$c22 = peg$literalExpectation('active', false),
            peg$c23 = 'inactive',
            peg$c24 = peg$literalExpectation('inactive', false),
            peg$c25 = '(auto-read-only)',
            peg$c26 = peg$literalExpectation('(auto-read-only)', false),
            peg$c27 = function() {
                return 'ro';
            },
            peg$c28 = ']',
            peg$c29 = peg$literalExpectation(']', false),
            peg$c30 = function(name, index, status) {        
                return {
                    'name': name,
                    'index': index,
                    'status': status
                };
            },
            peg$c31 = '(',
            peg$c32 = peg$literalExpectation('(', false),
            peg$c33 = ')',
            peg$c34 = peg$literalExpectation(')', false),
            peg$c35 = function(identifier) { return identifier; },
            peg$c36 = function(status) {
                switch (status) {
                case 'F':
                    return 'failed';
                case 'R':
                    return 'rescue';
                case 'S':
                    return 'spare';
                default:
                    return 'active';
                }
            },
            peg$c37 = 'F',
            peg$c38 = peg$literalExpectation('F', false),
            peg$c39 = 'S',
            peg$c40 = peg$literalExpectation('S', false),
            peg$c41 = 'R',
            peg$c42 = peg$literalExpectation('R', false),
            peg$c43 = ' blocks ',
            peg$c44 = peg$literalExpectation(' blocks ', false),
            peg$c45 = /^[0-9a-z, .]/i,
            peg$c46 = peg$classExpectation([['0', '9'], ['a', 'z'], ',', ' ', '.'], false, true),
            peg$c47 = function(blocks, parameters, devicePosition) {
                return concatObjects(
                    {
                        'blocks': blocks,
                        'parameters': parameters.trim()
                    },
                    devicePosition
                );
            },
            peg$c48 = '/',
            peg$c49 = peg$literalExpectation('/', false),
            peg$c50 = '] [',
            peg$c51 = peg$literalExpectation('] [', false),
            peg$c52 = /^[_,U]/,
            peg$c53 = peg$classExpectation(['_', ',', 'U'], false, false),
            peg$c54 = function(ideal, current) {
                return {
                    'ideal': ideal,
                    'current': current
                };
            },
            peg$c55 = 'bitmap: ',
            peg$c56 = peg$literalExpectation('bitmap: ', false),
            peg$c57 = ' pages [',
            peg$c58 = peg$literalExpectation(' pages [', false),
            peg$c59 = 'KB], ',
            peg$c60 = peg$literalExpectation('KB], ', false),
            peg$c61 = 'KB chunk',
            peg$c62 = peg$literalExpectation('KB chunk', false),
            peg$c63 = function(usedPages, totalPages, sizePages, chunkSize) {
                return {
                    'type': 'bitmap',
                    'usedPages': usedPages,
                    'totalPages': totalPages,
                    'sizePages': sizePages,
                    'chunkSize': chunkSize
                };
            },
            peg$c64 = /^[=]/,
            peg$c65 = peg$classExpectation(['='], false, false),
            peg$c66 = /^[>]/,
            peg$c67 = peg$classExpectation(['>'], false, false),
            peg$c68 = /^[.]/,
            peg$c69 = peg$classExpectation(['.'], false, false),
            peg$c70 = ']  ',
            peg$c71 = peg$literalExpectation(']  ', false),
            peg$c72 = ' =',
            peg$c73 = peg$literalExpectation(' =', false),
            peg$c74 = '% ',
            peg$c75 = peg$literalExpectation('% ', false),
            peg$c76 = ') ',
            peg$c77 = peg$literalExpectation(') ', false),
            peg$c78 = 'finish=',
            peg$c79 = peg$literalExpectation('finish=', false),
            peg$c80 = 'min ',
            peg$c81 = peg$literalExpectation('min ', false),
            peg$c82 = 'speed=',
            peg$c83 = peg$literalExpectation('speed=', false),
            peg$c84 = 'K/sec',
            peg$c85 = peg$literalExpectation('K/sec', false),
            peg$c86 = function(activityType, progress, processed, total, finish, speed) {
                return {
                    'type': 'activity',
                    'activityType': activityType,
                    'progress': progress,
                    'processed': processed,
                    'total': total,
                    'finish': finish,
                    'speed': speed
                };
            },
            peg$c87 = 'recovery',
            peg$c88 = peg$literalExpectation('recovery', false),
            peg$c89 = 'resync',
            peg$c90 = peg$literalExpectation('resync', false),
            peg$c91 = /^[^\n]/,
            peg$c92 = peg$classExpectation(['\n'], true, false),
            peg$c93 = function(value) {
                return {
                    'type': 'unknown',
                    'value': value
                };
            },
            peg$c94 = 'unused devices: ',
            peg$c95 = peg$literalExpectation('unused devices: ', false),
            peg$c96 = function() {
                return null;
            },
            peg$c97 = peg$otherExpectation('linuxDevice'),
            peg$c98 = 'sd',
            peg$c99 = peg$literalExpectation('sd', false),
            peg$c100 = 'hd',
            peg$c101 = peg$literalExpectation('hd', false),
            peg$c102 = /^[a-z]/,
            peg$c103 = peg$classExpectation([['a', 'z']], false, false),
            peg$c104 = 'sr',
            peg$c105 = peg$literalExpectation('sr', false),
            peg$c106 = 'sg',
            peg$c107 = peg$literalExpectation('sg', false),
            peg$c108 = 'st',
            peg$c109 = peg$literalExpectation('st', false),
            peg$c110 = 'md',
            peg$c111 = peg$literalExpectation('md', false),
            peg$c112 = 'nvme',
            peg$c113 = peg$literalExpectation('nvme', false),
            peg$c114 = 'n',
            peg$c115 = peg$literalExpectation('n', false),
            peg$c116 = 'p',
            peg$c117 = peg$literalExpectation('p', false),
            peg$c118 = 'mmcblk',
            peg$c119 = peg$literalExpectation('mmcblk', false),
            peg$c120 = 'raid',
            peg$c121 = peg$literalExpectation('raid', false),
            peg$c122 = '10',
            peg$c123 = peg$literalExpectation('10', false),
            peg$c124 = '0',
            peg$c125 = peg$literalExpectation('0', false),
            peg$c126 = '1',
            peg$c127 = peg$literalExpectation('1', false),
            peg$c128 = '2',
            peg$c129 = peg$literalExpectation('2', false),
            peg$c130 = '4',
            peg$c131 = peg$literalExpectation('4', false),
            peg$c132 = '5',
            peg$c133 = peg$literalExpectation('5', false),
            peg$c134 = '6',
            peg$c135 = peg$literalExpectation('6', false),
            peg$c136 = 'linear',
            peg$c137 = peg$literalExpectation('linear', false),
            peg$c138 = 'multipath',
            peg$c139 = peg$literalExpectation('multipath', false),
            peg$c140 = peg$otherExpectation('integer'),
            peg$c141 = /^[0-9]/,
            peg$c142 = peg$classExpectation([['0', '9']], false, false),
            peg$c143 = function(digits) {
                return parseInt(digits, 10);
            },
            peg$c144 = peg$otherExpectation('float'),
            peg$c145 = /^[0-9.]/,
            peg$c146 = peg$classExpectation([['0', '9'], '.'], false, false),
            peg$c147 = function(digits) {
                return parseFloat(digits, 10);
            },
            peg$c148 = peg$otherExpectation('whitespace'),
            peg$c149 = /^[ ]/,
            peg$c150 = peg$classExpectation([' '], false, false),
            peg$c151 = function() {
                return null;
            },

            peg$currPos          = 0,
            peg$savedPos         = 0,
            peg$posDetailsCache  = [{ line: 1, column: 1 }],
            peg$maxFailPos       = 0,
            peg$maxFailExpected  = [],
            peg$silentFails      = 0,

            peg$result;

        if ('startRule' in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
            }

            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
            return input.substring(peg$savedPos, peg$currPos);
        }

        function location() {
            return peg$computeLocation(peg$savedPos, peg$currPos);
        }

        function expected(description, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

            throw peg$buildStructuredError(
                [peg$otherExpectation(description)],
                input.substring(peg$savedPos, peg$currPos),
                location
            );
        }

        function error(message, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

            throw peg$buildSimpleError(message, location);
        }

        function peg$literalExpectation(text, ignoreCase) {
            return { type: 'literal', text: text, ignoreCase: ignoreCase };
        }

        function peg$classExpectation(parts, inverted, ignoreCase) {
            return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
        }

        function peg$anyExpectation() {
            return { type: 'any' };
        }

        function peg$endExpectation() {
            return { type: 'end' };
        }

        function peg$otherExpectation(description) {
            return { type: 'other', description: description };
        }

        function peg$computePosDetails(pos) {
            var details = peg$posDetailsCache[pos], p;

            if (details) {
                return details;
            } else {
                p = pos - 1;
                while (!peg$posDetailsCache[p]) {
                    p--;
                }

                details = peg$posDetailsCache[p];
                details = {
                    line:   details.line,
                    column: details.column
                };

                while (p < pos) {
                    if (input.charCodeAt(p) === 10) {
                        details.line++;
                        details.column = 1;
                    } else {
                        details.column++;
                    }

                    p++;
                }

                peg$posDetailsCache[pos] = details;
                return details;
            }
        }

        function peg$computeLocation(startPos, endPos) {
            var startPosDetails = peg$computePosDetails(startPos),
                endPosDetails   = peg$computePosDetails(endPos);

            return {
                start: {
                    offset: startPos,
                    line:   startPosDetails.line,
                    column: startPosDetails.column
                },
                end: {
                    offset: endPos,
                    line:   endPosDetails.line,
                    column: endPosDetails.column
                }
            };
        }

        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) { return; }

            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }

            peg$maxFailExpected.push(expected);
        }

        function peg$buildSimpleError(message, location) {
            return new peg$SyntaxError(message, null, null, location);
        }

        function peg$buildStructuredError(expected, found, location) {
            return new peg$SyntaxError(
                peg$SyntaxError.buildMessage(expected, found),
                expected,
                found,
                location
            );
        }

        function peg$parsestart() {
            var s0, s1, s2, s3;

            s0 = peg$currPos;
            s1 = peg$parsepersonalities();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseraid();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parseraid();
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parseunused();
                    if (s3 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c0(s1, s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parsepersonalities() {
            var s0, s1, s2, s3, s4, s5, s6;

            s0 = peg$currPos;
            if (input.substr(peg$currPos, 16) === peg$c1) {
                s1 = peg$c1;
                peg$currPos += 16;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c2); }
            }
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 91) {
                    s4 = peg$c3;
                    peg$currPos++;
                } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c4); }
                }
                if (s4 !== peg$FAILED) {
                    s5 = peg$parseraidType();
                    if (s5 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 2) === peg$c5) {
                            s6 = peg$c5;
                            peg$currPos += 2;
                        } else {
                            s6 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c6); }
                        }
                        if (s6 !== peg$FAILED) {
                            peg$savedPos = s3;
                            s4 = peg$c7(s5);
                            s3 = s4;
                        } else {
                            peg$currPos = s3;
                            s3 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                }
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 91) {
                        s4 = peg$c3;
                        peg$currPos++;
                    } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c4); }
                    }
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parseraidType();
                        if (s5 !== peg$FAILED) {
                            if (input.substr(peg$currPos, 2) === peg$c5) {
                                s6 = peg$c5;
                                peg$currPos += 2;
                            } else {
                                s6 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c6); }
                            }
                            if (s6 !== peg$FAILED) {
                                peg$savedPos = s3;
                                s4 = peg$c7(s5);
                                s3 = s4;
                            } else {
                                peg$currPos = s3;
                                s3 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s3;
                            s3 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                }
                if (s2 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 10) {
                        s3 = peg$c8;
                        peg$currPos++;
                    } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c9); }
                    }
                    if (s3 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c10(s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parseraid() {
            var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

            s0 = peg$currPos;
            s1 = peg$parsefirstLine();
            if (s1 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 10) {
                    s2 = peg$c8;
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c9); }
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsewhitespace();
                    if (s3 !== peg$FAILED) {
                        s4 = peg$parsesecondLine();
                        if (s4 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 10) {
                                s5 = peg$c8;
                                peg$currPos++;
                            } else {
                                s5 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c9); }
                            }
                            if (s5 !== peg$FAILED) {
                                s6 = [];
                                s7 = peg$currPos;
                                s8 = peg$parsewhitespace();
                                if (s8 !== peg$FAILED) {
                                    s9 = peg$parseoptionLine();
                                    if (s9 !== peg$FAILED) {
                                        if (input.charCodeAt(peg$currPos) === 10) {
                                            s10 = peg$c8;
                                            peg$currPos++;
                                        } else {
                                            s10 = peg$FAILED;
                                            if (peg$silentFails === 0) { peg$fail(peg$c9); }
                                        }
                                        if (s10 !== peg$FAILED) {
                                            peg$savedPos = s7;
                                            s8 = peg$c11(s1, s4, s9);
                                            s7 = s8;
                                        } else {
                                            peg$currPos = s7;
                                            s7 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s7;
                                        s7 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s7;
                                    s7 = peg$FAILED;
                                }
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$currPos;
                                    s8 = peg$parsewhitespace();
                                    if (s8 !== peg$FAILED) {
                                        s9 = peg$parseoptionLine();
                                        if (s9 !== peg$FAILED) {
                                            if (input.charCodeAt(peg$currPos) === 10) {
                                                s10 = peg$c8;
                                                peg$currPos++;
                                            } else {
                                                s10 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c9); }
                                            }
                                            if (s10 !== peg$FAILED) {
                                                peg$savedPos = s7;
                                                s8 = peg$c11(s1, s4, s9);
                                                s7 = s8;
                                            } else {
                                                peg$currPos = s7;
                                                s7 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s7;
                                            s7 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s7;
                                        s7 = peg$FAILED;
                                    }
                                }
                                if (s6 !== peg$FAILED) {
                                    s7 = peg$parsewhitespace();
                                    if (s7 !== peg$FAILED) {
                                        if (input.charCodeAt(peg$currPos) === 10) {
                                            s8 = peg$c8;
                                            peg$currPos++;
                                        } else {
                                            s8 = peg$FAILED;
                                            if (peg$silentFails === 0) { peg$fail(peg$c9); }
                                        }
                                        if (s8 !== peg$FAILED) {
                                            peg$savedPos = s0;
                                            s1 = peg$c12(s1, s4, s6);
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parsefirstLine() {
            var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

            s0 = peg$currPos;
            s1 = peg$parselinuxDevice();
            if (s1 !== peg$FAILED) {
                if (input.substr(peg$currPos, 3) === peg$c13) {
                    s2 = peg$c13;
                    peg$currPos += 3;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c14); }
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsestate();
                    if (s3 !== peg$FAILED) {
                        s4 = peg$currPos;
                        if (input.charCodeAt(peg$currPos) === 32) {
                            s5 = peg$c15;
                            peg$currPos++;
                        } else {
                            s5 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c16); }
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parseaccess();
                            if (s6 !== peg$FAILED) {
                                peg$savedPos = s4;
                                s5 = peg$c17(s1, s3, s6);
                                s4 = s5;
                            } else {
                                peg$currPos = s4;
                                s4 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s4;
                            s4 = peg$FAILED;
                        }
                        if (s4 === peg$FAILED) {
                            s4 = null;
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = peg$currPos;
                            if (input.charCodeAt(peg$currPos) === 32) {
                                s6 = peg$c15;
                                peg$currPos++;
                            } else {
                                s6 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c16); }
                            }
                            if (s6 !== peg$FAILED) {
                                s7 = peg$parseraidType();
                                if (s7 !== peg$FAILED) {
                                    peg$savedPos = s5;
                                    s6 = peg$c18(s1, s3, s4, s7);
                                    s5 = s6;
                                } else {
                                    peg$currPos = s5;
                                    s5 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s5;
                                s5 = peg$FAILED;
                            }
                            if (s5 === peg$FAILED) {
                                s5 = null;
                            }
                            if (s5 !== peg$FAILED) {
                                s6 = [];
                                s7 = peg$currPos;
                                if (input.charCodeAt(peg$currPos) === 32) {
                                    s8 = peg$c15;
                                    peg$currPos++;
                                } else {
                                    s8 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c16); }
                                }
                                if (s8 !== peg$FAILED) {
                                    s9 = peg$parsedevice();
                                    if (s9 !== peg$FAILED) {
                                        peg$savedPos = s7;
                                        s8 = peg$c19(s1, s3, s4, s5, s9);
                                        s7 = s8;
                                    } else {
                                        peg$currPos = s7;
                                        s7 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s7;
                                    s7 = peg$FAILED;
                                }
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$currPos;
                                    if (input.charCodeAt(peg$currPos) === 32) {
                                        s8 = peg$c15;
                                        peg$currPos++;
                                    } else {
                                        s8 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c16); }
                                    }
                                    if (s8 !== peg$FAILED) {
                                        s9 = peg$parsedevice();
                                        if (s9 !== peg$FAILED) {
                                            peg$savedPos = s7;
                                            s8 = peg$c19(s1, s3, s4, s5, s9);
                                            s7 = s8;
                                        } else {
                                            peg$currPos = s7;
                                            s7 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s7;
                                        s7 = peg$FAILED;
                                    }
                                }
                                if (s6 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c20(s1, s3, s4, s5, s6);
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parsestate() {
            var s0;

            if (input.substr(peg$currPos, 6) === peg$c21) {
                s0 = peg$c21;
                peg$currPos += 6;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 8) === peg$c23) {
                    s0 = peg$c23;
                    peg$currPos += 8;
                } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c24); }
                }
            }

            return s0;
        }

        function peg$parseaccess() {
            var s0, s1;

            s0 = peg$currPos;
            if (input.substr(peg$currPos, 16) === peg$c25) {
                s1 = peg$c25;
                peg$currPos += 16;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c26); }
            }
            if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c27();
            }
            s0 = s1;

            return s0;
        }

        function peg$parsedevice() {
            var s0, s1, s2, s3, s4, s5;
